[package]
authors = ["Pierre-Yves Aillet <pyaillet@gmail.com>"]
categories = ["embedded", "hardware-support"]
description = "Rust driver for Bma423 accelerometer"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "bma423"
readme = "README.md"
repository = "https://github.com/pyaillet/bma423-rs"
version = "0.0.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
accelerometer = {version = "^0.12", optional = true}
bitmask-enum = {version = "^1.1"}
embedded-hal = "1.0.0-rc.1"
num_enum = {version = "^0.5", default-features = false}

# Logging
defmt = "=0.3.2"

[features]
accel = ["accelerometer"]
bma421 = []
bma423 = []
default = ["accel", "bma423"]
